--- a/src/cl/larrainvial/carterasAFP/views/MantenedorRegionView.mxml
+++ b/src/cl/larrainvial/carterasAFP/views/MantenedorRegionView.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="1000" height="520" fontSize="14">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="1000" height="520" fontSize="14" xmlns:views="cl.larrainvial.carterasAFP.views.*">
 	<mx:Script>
 		<![CDATA[
 			import cl.larrainvial.carterasAFP.components.ConfigUtil;
@@ -22,96 +22,36 @@
 				ev.dispatch();
 			}
 			
-			protected function fnGuardar(event:MouseEvent):void
-			{
-				// TODO Auto-generated method stub
-				
-				if(txtSubregion.text == ''){
-					Alert.show('Ingrese un valor en el campo "Subregión"', 'Atención');
-					return;
-					
-				}
-				
-				if(txtMercado.text == ''){
-					Alert.show('Ingrese un valor en el campo "Mercado"', 'Atención');
-					return;
-					
-				}
-				
-				if(txtRegion.text == ''){
-					Alert.show('Ingrese un valor en el campo "Región"', 'Atención');
-					return;
-					
-				}
-				if(region){
-					var ev:RegionEvent = new RegionEvent(RegionEvent.EVENT_REGION_ACTUALIZAR);
-					ev.callback = fnBuscar;
-					ev.xmlParam = '<WSParam><Parametros><XmlIn><Root><Dato nombre="' + txtRegion.text + '" mercado="' + txtMercado.text + '" subregion="' + txtSubregion.text + '" id="' + region.id + '" /></Root></XmlIn></Parametros></WSParam>'
-					ev.dispatch();
-				} else {
-					ev = new RegionEvent(RegionEvent.EVENT_REGION_GUARDAR);
-					ev.callback = fnBuscar;
-					ev.xmlParam = '<WSParam><Parametros><XmlIn><Root><Dato nombre="' + txtRegion.text + '" mercado="' + txtMercado.text + '" subregion="' + txtSubregion.text + '" /></Root></XmlIn></Parametros></WSParam>'
-					ev.dispatch();	
-				}
-				
-			}
+			
 			
 			protected function fnSeleccionActualizacion(event:ListEvent):void
 			{
 				// TODO Auto-generated method stub
 				this.region = dg.selectedItem as RegionVO;
-				txtMercado.text = region.mercado;
-				txtRegion.text = region.nombre;
-				txtSubregion.text = region.subregion;
+				frm.txtMercado.text = region.mercado;
+				frm.txtRegion.text = region.nombre;
+				frm.txtSubregion.text = region.subregion;
 			}
 			
-			protected function fnLimpiar(event:MouseEvent):void
-			{
-				// TODO Auto-generated method stub
-				this.region = null;
-				txtMercado.text = '';
-				txtRegion.text = '';
-				txtSubregion.text = '';
-				dg.selectedItem = null;
-			}
+			
 			
 		]]>
 	</mx:Script>
 	<mx:VBox width="100%" height="100%" horizontalAlign="center">
-		<mx:HBox top="0" width="100%" horizontalCenter="0" horizontalAlign="center">
-			
-			<mx:Form width="50%" verticalGap="30">
-				<mx:FormItem label="Nombre">
-					<mx:TextInput id="txtRegion" focusOut="txtRegion.text = ConfigUtil.fnFormatoNombres(txtRegion.text)" maxChars="30"/>
-				</mx:FormItem>
-				<mx:FormItem label="Mercado">
-					<mx:TextInput id="txtMercado" focusOut="txtMercado.text = ConfigUtil.fnFormatoNombres(txtMercado.text)" maxChars="20"/>
-				</mx:FormItem>
-			</mx:Form>
-			<mx:Form width="50%" verticalGap="30">
-				<mx:FormItem label="Subregión">
-					<mx:TextInput id="txtSubregion" focusOut="txtSubregion.text = ConfigUtil.fnFormatoNombres(txtSubregion.text)" maxChars="25"/>
-				</mx:FormItem>
-				
-				
-			</mx:Form>
-		</mx:HBox>
-			
-		<mx:HBox>
-			<mx:Button label="{region ? 'Actualizar' : 'Guardar'}" click="fnGuardar(event)"/>
-			<mx:Button label="Nuevo" click="fnLimpiar(event)"/>			
-		</mx:HBox>
-		<mx:HBox horizontalAlign="right" width="100%">
+		<views:FormRegion id="frm" width="100%" dg="{dg}" fnBuscar="{fnBuscar}"/>
+		<mx:HBox horizontalAlign="right" width="100%" paddingRight="15">
 			<mx:Button label="Buscar" click="fnBuscar()"/>	
 		</mx:HBox>
-		<mx:DataGrid id="dg" width="97%" creationComplete="fnBuscar()" itemClick="fnSeleccionActualizacion(event)" dataProvider="{model.arrRegiones}">
-			<mx:columns>
-				<mx:DataGridColumn dataField="nombre" headerText="Nombre"/>
-				<mx:DataGridColumn dataField="mercado" headerText="Mercado"/>
-				<mx:DataGridColumn dataField="subregion" headerText="Región"/>
-			</mx:columns>
-		</mx:DataGrid>
+		<mx:HBox width="100%" horizontalAlign="right" paddingRight="15" paddingLeft="15" height="100%">
+			<mx:DataGrid id="dg" width="100%" height="100%" creationComplete="fnBuscar()" itemClick="fnSeleccionActualizacion(event)" dataProvider="{model.arrRegiones}">
+				<mx:columns>
+					<mx:DataGridColumn dataField="nombre" headerText="Nombre"/>
+					<mx:DataGridColumn dataField="mercado" headerText="Mercado"/>
+					<mx:DataGridColumn dataField="subregion" headerText="Región"/>
+				</mx:columns>
+			</mx:DataGrid>	
+		</mx:HBox>
+		
 		
 	</mx:VBox>
 	
