--- a/src/cl/larrainvial/carterasAFP/views/MantenedorManagerView.mxml
+++ b/src/cl/larrainvial/carterasAFP/views/MantenedorManagerView.mxml
@@ -39,7 +39,7 @@
 	</mx:Script>
 	<mx:VBox width="100%" height="100%" horizontalAlign="center">
 		<views:FormManager id="frm" width="100%" dg="{dg}" fnBuscar="{fnBuscar}"/>
-		<mx:HBox horizontalAlign="right" width="100%">
+		<mx:HBox horizontalAlign="right" width="100%" paddingRight="15">
 			<mx:Button label="Buscar" click="fnBuscar()"/>	
 		</mx:HBox>
 		<mx:HBox width="100%" horizontalAlign="right" paddingRight="15" paddingLeft="15" height="100%">
